# webrtc

./: CLAUDE.md  Dockerfile  README.md  docker-compose.yml  run  run_with_netspy  smoke_test.sh
examples/: Cargo.toml
examples/examples/vtk-cube/: CMakeLists.txt  README.md  main.cpp  webrtc_c_api.h
examples/examples/vtk-cube-client-console/: vtk-cube-client-console.rs
examples/signalling-server/: CMakeLists.txt  signalling_server.cpp
examples/vtk-cube-client/: index.html
interceptor/: Cargo.toml
interceptor/src/: error.rs  stream_reader.rs
interceptor/src/nack/generator/: generator_stream.rs
srtp/: Cargo.toml
srtp/src/: stream.rs
srtp/src/session/: mod.rs
util/src/buffer/: mod.rs
webrtc/: Cargo.toml
webrtc/src/: lib.rs
webrtc/src/dtls_transport/: mod.rs
webrtc/src/ice_transport/: ice_candidate_pair.rs
webrtc/src/mux/: endpoint.rs  mod.rs  mux_func.rs
webrtc/src/peer_connection/: mod.rs  peer_connection_internal.rs
webrtc/src/rtp_transceiver/rtp_receiver/: mod.rs
webrtc/src/track/track_remote/: mod.rs
